# BM-to-PNG-Converter

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: bm_to_png_converter.h  raymath.h
include/win32/: bm_to_png_converter.h
include/win64/: bm_to_png_converter.h
src/: bm_to_png.c  main.c
